--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,6 +1,9 @@
 name: "CodeQL - Custom"
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
@@ -59,5 +62,4 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
-        upload: false
         output: sarif-results
