build: Use clang20 and clang‑format (#22)
- Switch default compiler to Clang/Clang++ 20 and install clang‑format v20 in Docker
  - Note that the necessity of `-Wno-error=deprecated-declarations` is because newer Clang surface the warning. The warning only appears in using google-test.
- Reformat the entire codebase with clang‑format v20 (normalize lambda arrows, loop bodies, remove stray includes).
- Reinforce constant‑time guarantees by inlining mask logic and inserting small assembly barriers in core modules. Note that some added barriers are necessary when we switch the compiler to Clang. The barriers prevent some optimizations that breaks the constant-time property.
- Other minor changes: tidy up CMake options, `.gitignore`, and README.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 # We generate the .a files here
 lib/
 
+# Object & binary blobs
+a.out
+*.o
+*.obj
+*.a
+*.so
+*.dylib
+*.dll
+*.exe
+*.dSYM/
+*.sancov
+
 # CMake generated files
 **build/
 
@@ -10,4 +22,3 @@ lib/
 # gh-pages files
 docsgen/
 node_modules/
-
