refactor: demo code rearragement (#30)
This PR moves the go wrappers under the demo folder to emphasize that the go wrappers are meant to serve as an example and not production ready yet.

--- a/demos-cpp/basic_primitive/CMakeLists.txt
+++ b/demos-cpp/basic_primitive/CMakeLists.txt
@@ -5,7 +5,7 @@ project(mpc-demo-basic_primitive LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(REPO_CMAKE_DIR ${CMAKE_CURRENT_LIST_DIR}/../../../cmake)
+set(REPO_CMAKE_DIR ${CMAKE_CURRENT_LIST_DIR}/../../cmake)
 
 include(${REPO_CMAKE_DIR}/macros.cmake)
 include(${REPO_CMAKE_DIR}/arch.cmake)
